<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey" >
    

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <ImageView
		        android:id="@+id/imageView1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:contentDescription="@string/app_name"
        		android:layout_gravity="center_horizontal"
		        android:src="@drawable/loading" />
            
            

		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="25dp"
		        android:layout_gravity="center_horizontal"
		        android:text="@string/credits"
		        android:textAllCaps="true"
		        android:textColor="@color/blue"
		        android:textSize="15sp" />

		    
		    
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dp"
		        android:layout_marginBottom="20dp"
		        android:layout_gravity="center_horizontal"
		        android:text="@string/dev"
		        android:textAllCaps="true"
		        android:textColor="@color/white"
		        android:textSize="10sp" />
		    
		    
		     <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:text="@string/cc"
		        android:textAllCaps="true"
		        android:textColor="@color/orange"
		        android:textSize="12sp" />
		     
		    <ImageView
		        android:id="@+id/imageView2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"		        
		        android:layout_gravity="center_horizontal"
		        android:contentDescription="@string/app_name"
		        android:src="@drawable/deco" />
            
        </LinearLayout>
    </ScrollView>

</LinearLayout>